Added a posts collection

--- a/microscope/client/main.html
+++ b/microscope/client/main.html
@@ -5,9 +5,10 @@
 <body>
 	<div class="container">
 	
-		<header class="navbar">
-			<div class="navbar-inner">
-				<a class="brand" href="/">Microscope</a>
+		<header class="navbar navbar-default">
+			<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/">Microscope</a></div>
 			</div>
 		</header>
 		
